"Purge Unused Data" causing a crash when saving file #130136
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#130136
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-6.11.5-gentoo-r1-x86_64-AMD_Ryzen_9_3950X_16-Core_Processor-with-glibc2.40 64 Bits, WAYLAND UI
Graphics card: NVIDIA RTX A5000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 565.57.01 Opengl Backend
Blender Version
Broken: version: 4.4.0 Alpha, branch: main, commit date: 2024-11-10 22:47, hash:
63a91c8d82a1
Worked: (newest version of Blender that worked as expected)
Short description of error
"Purge Unused Data" causes a crash when saving the file. Talked with Sybren and Nathan about this and it may be related to the latest animation code. There's a specific file in question that they can look at, at the studio. Path:
/shared/users/hjalti/bcon2024_layout_workshop/blender/shots/parlour_demofile_packed-v002.blend
Exact steps for others to reproduce the error
Open up the "parlour_demofile_packed-v002.blend" file
Do "Purge Unused Data"
Save the file
...it will crash.
In debug Blender it will print out the following details:
Investigation so far has revealed the following things:
Finally, when loading the file there are a bunch of warnings about library override issues. Here is a small sample (the full list of warnings is many pages long):
I will mark as confirmed since Nathan has looked into a bit and assigned it to theirself.
Is this a regression?
CC @mont29
Some more information: