Fix #130136: "Purge Unused Data" causing a crash when saving file

Fix a crash that was caused by various inter-connected issues, all
related to ID pointer management:

- `BKE_lib_id_swap()`, called by the library override system in this
  case, does not call the regular ID remapping code. This meant that it
  didn't automatically remap pointers in the list of action slot users.
  The function now explicitly calls a function that swaps the ID
  pointers in the relevant action slot user lists. This also takes into
  account action slots used via the NLA or Action constraints.
- `action_foreach_id()` could in certain cases trigger a rebuild of the
  action slot user list, which in itself would call
  `BKE_library_foreach_ID_link()`, causing all kinds of problems. This
  is now solved by explicitly visiting embedded node trees (instead of
  (mis)using `BKE_library_foreach_ID_link()` for this). The new code
  also allows the pointer remapping functionality to work properly (not
  necessary to fix this bug, but a nice side-effect of the fix).
- `animrig::Slot::users_remove()` now also works when there are multiple
  occurrences of the same ID. Because of the above-mentioned pointer
  remapping now working correctly, the pointers in the slot user list
  are not 100% under control of the Slot class, and thus there could
  hypothetically be duplicates there.